AboutPageAssets/styles/aboutPageStyle.css
@charset "utf-8";
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap');

/* =========================================
   Global Styles
   ========================================= */
body {
    margin-left: auto;
    margin-right: auto;
    width: 92%;
    max-width: 960px;
    padding-left: 2.275%;
    padding-right: 2.275%;
    overflow-x: hidden;
}

.prof-link {
    font-weight: bold;
    color: rgba(15,76,129,1.00);
    text-decoration: none;
}

.prof-link:hover {
    color: #007bff;
    text-decoration: underline;
}

.fab, .fas {
    margin-right: 5px;
    color: #555;
    font-size: 16px;
}

/* =========================================
   Header & Profile
   ========================================= */
header {
    text-align: center;
    display: block;
    /* Laptop/Desktop Override enforced globally */
    margin-top: -3%;    
}

header .profileLogo .logoPlaceholder {
    background-color: rgba(208,207,207,1.00);
    width: 187px;
    text-align: center;
    /* Laptop/Desktop Override enforced globally */
    float: left;
    margin-bottom: 50px;
}

header .logoPlaceholder span {
    font-family: 'Montserrat', sans-serif;
    font-size: 30px;
    font-weight: 700;
    line-height: 53px;
    color: rgba(255,255,255,1.00);
    width: 80px;
    height: 22px;
}

header .profilePhoto {
    background-color: rgba(237, 237, 237, 1);
    width: 259px;
    height: 259px;
    position: relative;
    /* Laptop/Desktop Override enforced globally */
    float: left;
    clear: both;
    margin-right: 3%;
    padding-top: -5%;
}

header .profilePhoto img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    transition: opacity 0.3s ease;
}

header .profilePhoto .default-image { opacity: 1; }
header .profilePhoto .hover-image { opacity: 0; }
header .profilePhoto:hover .default-image { opacity: 0; }
header .profilePhoto:hover .hover-image { opacity: 1; }

header .profileHeader {
    /* Laptop/Desktop Override enforced globally */
    text-align: left;
    padding-top: 5%;
}

header .profileHeader h1 {
    font-family: 'Montserrat', sans-serif;
    font-size: 35px;
    font-weight: 700;
    line-height: 24px;
    color: rgba(43,48,123,1.00);
}

header .profileHeader h3 {
    font-family: sans-serif;
    font-size: 16px;
    font-weight: 700;
    line-height: 24px;
    color: rgba(146,146,146,1.00);
}

header .profileHeader hr {
    background-color: rgba(15,76,129,0.40);
    height: 1.0px;
    padding: 0px;
}

header .profileHeader p {
    font-family: sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.8;
    color: black;
    overflow-y: auto;
}

/* Profile Links */
header .profileLinks {
    position: relative;
    width: 320px;
    height: 60px;
    background: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    transform: translateX(-55px) translateY(240px);
}

header .profileLinks ul {
    width: 350px;
    display: flex;
}

header .profileLinks ul li {
    list-style: none;
    position: relative;
    width: 70px;
    height: 60px;
    z-index: 2;
}

header .profileLinks ul li a {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    text-align: center;
    font-weight: 500;
}

header .profileLinks ul li a .icon {
    position: relative;
    display: block;
    line-height: 65px;
    font-size: 1.5em;
    transition: 0.5s;
    color: #222327;
}

header .profileLinks ul li.active a .icon {
    transform: translateY(-30px);
    color: rgba(15,76,129,1.00);
}

header .profileLinks ul li a .icon-text {
    position: absolute;
    background: rgba(15,76,129,1.00);
    color: #fff;
    padding: 2px 7px;
    border-radius: 12px;
    font-weight: 400;
    font-size: 0.75em;
    letter-spacing: 0.05em;
    transition: 0.5s;
    opacity: 0;
    transform: translatey(15px);
}

header .profileLinks ul li.active a .icon-text {
    transform: translateY(-4px);
    opacity: 1;
}

header .profileLinks .indicator {
    position: absolute;
    top: -35%;
    width: 70px;
    height: 70px;
    background: #fff;
    border-radius: 50%;
    Z-index: 1;
    transition: 0.5s;
}

header .profileLinks .indicator::before {
    content: "";
    position: absolute;
    top: 5px;
    width: 30px;
    height: 30px;
    left: -28px;
    background: transparent;
    border-radius: 50%;
    box-shadow: 15px 18px #fff;
}

header .profileLinks .indicator::after {
    content: "";
    position: absolute;
    top: 5px;
    width: 30px;
    height: 30px;
    right: -28px;
    background: transparent;
    border-radius: 50%;
    box-shadow: -15px 18px #fff;
}

header .profileLinks ul li:nth-child(1).active ~ .indicator { transform: translateX(calc(70px * 0)); }
header .profileLinks ul li:nth-child(2).active ~ .indicator { transform: translateX(calc(70px * 1)); }
header .profileLinks ul li:nth-child(3).active ~ .indicator { transform: translateX(calc(70px * 2)); }
header .profileLinks ul li:nth-child(4).active ~ .indicator { transform: translateX(calc(70px * 3)); }

/* Profile Container */
header .profileContainer {
    display: flex;
    align-items: center;
    gap: 15px;
}

/* Wechat Modal (Preserved but hidden) */
header .profileContainer .modal {
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1000;
}
header .profileContainer .modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 50px;
    border: 1px solid #888;
    border-radius: 20px;
    max-width: 25%;
    max-height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}
header .profileContainer .modal-content img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}
/* ... */

